# slidedown

./: .gitignore  README.md  TEST copy.md  TEST.md  presentation.md  projects.json  pyproject.toml  sa.md  sads.md  sasadsdsa.md  temp_end.txt  test with ui.md  test.py
.github/workflows/: publish.yml
slidedown/: cli.py
