[project]
name = "slidedown"
version = "0.1.0"
description = "A Python library for creating interactive slideshows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich",
    "textual",
    "typer",
    "markdown-it-py",
    "watchdog",
]

[project.scripts]
slidedown = "slidedown.cli:app"

[tool.setuptools.packages]
find = ["slidedown"]
